--- a/obs/forms/OBSBasic.ui
+++ b/obs/forms/OBSBasic.ui
@@ -218,7 +218,7 @@
                  <rect>
                   <x>0</x>
                   <y>0</y>
-                  <width>231</width>
+                  <width>144</width>
                   <height>16</height>
                  </rect>
                 </property>
@@ -331,6 +331,15 @@
                <property name="frameShadow">
                 <enum>QFrame::Plain</enum>
                </property>
+               <property name="dragDropOverwriteMode">
+                <bool>false</bool>
+               </property>
+               <property name="dragDropMode">
+                <enum>QAbstractItemView::NoDragDrop</enum>
+               </property>
+               <property name="defaultDropAction">
+                <enum>Qt::IgnoreAction</enum>
+               </property>
                <addaction name="actionRemoveScene"/>
               </widget>
              </item>
@@ -429,6 +438,18 @@
                </property>
                <property name="frameShape">
                 <enum>QFrame::NoFrame</enum>
+               </property>
+               <property name="showDropIndicator" stdset="0">
+                <bool>true</bool>
+               </property>
+               <property name="dragEnabled">
+                <bool>false</bool>
+               </property>
+               <property name="dragDropMode">
+                <enum>QAbstractItemView::InternalMove</enum>
+               </property>
+               <property name="defaultDropAction">
+                <enum>Qt::IgnoreAction</enum>
                </property>
                <addaction name="actionRemoveSource"/>
               </widget>
@@ -553,7 +574,7 @@
      <x>0</x>
      <y>0</y>
      <width>927</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu_File">
